--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "bcryptjs": "^3.0.3",
     "cloudinary": "^2.8.0",
+    "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.0.0",
     "next": "16.0.7",
     "next-auth": "^4.24.13",
