--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bcryptjs": "^3.0.3",
     "cloudinary": "^2.8.0",
     "jsonwebtoken": "^9.0.3",
+    "lucide-react": "^0.556.0",
     "mongoose": "^9.0.0",
     "next": "16.0.7",
     "next-auth": "^4.24.13",
